--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
     "@next/eslint-plugin-next": "^10.0.4",
+    "@react-three/eslint-plugin": "^0.1.1",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.18",
     "babel-eslint": "^10.1.0",
